# ao-no-out7ook

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.agent/workflows/: automation.md  breakdown_story.md
.github/workflows/: ci.yml
docs/: API_INTEGRATION.md  ARCHITECTURE.md  CLI_SPEC.md  REQUIREMENTS.md  URL_SCHEME.md
src/: config.rs  keyring.rs  lib.rs  main.rs  platform.rs  state.rs
src/commands/: agent.rs  calendar.rs  checkin.rs  config.rs  devops.rs  markdown.rs  mod.rs  pace.rs  task.rs
src/devops/: client.rs  hierarchy.rs  mod.rs  models.rs
src/graph/: auth.rs  client.rs  mod.rs  models.rs  scheduler.rs
src/pace/: client.rs  duration.rs  mod.rs  models.rs  retry.rs
src/utils/: markdown.rs
tests/: agent_test.rs  calendar_mapping_test.rs  calendar_test.rs  cli_spec_test.rs  config_test.rs  config_validation_test.rs  devops_test.rs  dry_run_test.rs  integration_test.rs  list_filtering_test.rs  pace_test.rs  state_test.rs  update_test.rs
