[package]
name = "ao-no-out7ook"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "ano7"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = "0.14"
dirs = "5"
fs2 = "0.4"
home = "0.5"
keyring = "3"
oauth2 = "4"
pulldown-cmark = "0.12"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termtree = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
wiremock = "0.6.5"
